--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,16 @@
     <dimen name="app_bar_height">200dp</dimen>
     <dimen name="item_width">200dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
+    <dimen name="xs">4dp</dimen>
+    <dimen name="s">8dp</dimen>
+    <dimen name="m">16dp</dimen>
+    <dimen name="l">32dp</dimen>
+    <dimen name="xl">48dp</dimen>
+
+
+    <dimen name="mT">16sp</dimen>
+    <dimen name="lT">32sp</dimen>
+    <dimen name="xlT">48sp</dimen>
+
 </resources>
