part3 - display online Comic

--- a/app/src/main/res/layout/text_to_speech.xml
+++ b/app/src/main/res/layout/text_to_speech.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:windowSoftInputMode="adjustResize">
+    android:padding="@dimen/m">
 
     <EditText
         android:id="@+id/text_speech"
@@ -18,8 +18,8 @@
         android:id="@+id/text_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/s"
         android:src="@drawable/ic_volume_up_black_36dp"
-        />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
-</LinearLayout>
+</RelativeLayout>
