--- a/app/src/main/res/layout/comic.xml
+++ b/app/src/main/res/layout/comic.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="@dimen/m">
 
 
     <edu.ucsb.cs.cs190i.JingYan.masterdetaildemo.CanvasView
         android:id="@+id/canvas"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/comic_button"
@@ -24,25 +22,39 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:text="@string/Comic_button"/>
+        android:text="@string/Comic_button" />
 
     <EditText
         android:id="@+id/number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/Comic_hint"
-        android:textSize="@dimen/mT"
         android:layout_above="@id/comic_button"
+        android:hint="@string/Comic_hint"
         android:inputType="number"
-        />
+        android:textSize="@dimen/mT" />
 
     <TextView
         android:id="@+id/test_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/number"
-        android:layout_alignParentEnd="true"
-        />
+        android:layout_alignParentEnd="true" />
+
+    <RelativeLayout
+        android:id="@+id/loadingPanel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/number"
+        android:gravity="center">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="visible"/>
+    </RelativeLayout>
+
+
 
 
 
